snapshots/syntax/library/functions/objects/getobject/getobject_with_class.snap
---
source: src/syntax/library/functions/objects/getobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: app
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetObject
        - kind: LeftParenthesis
          text: (
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Excel.Application\""
        - kind: RightParenthesis
          text: )
